Chore/feat17/static analysis cleanup (#147)
chore: clean up static analysis findings across backend, frontend, and tests